feat: quest result is a universal keyword.
