# src/backend/generated/models/correct_answer_response.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CorrectAnswerResponse correct answer response
+//
+// swagger:model CorrectAnswerResponse
+type CorrectAnswerResponse struct {
+
+	// keyword
+	Keyword string `json:"keyword"`
+}
+
+// Validate validates this correct answer response
+func (m *CorrectAnswerResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this correct answer response based on context it is used
+func (m *CorrectAnswerResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CorrectAnswerResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CorrectAnswerResponse) UnmarshalBinary(b []byte) error {
+	var res CorrectAnswerResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
